--- a/src/pages/Home/components/main.css
+++ b/src/pages/Home/components/main.css
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 768px) {
   .swiper {
-    width: 250px;
+    width: 270px;
     height: 350px;
   }
 }
